integrations doc update [skip ci]